--- a/app/index.html
+++ b/app/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <title>Swanson Software</title>
-    <link rel="icon" sizes="32x32" href="favicon.ico">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="assets/images/favicon-180x180.png">
-    <link rel="mask-icon" href="assets/images/safari-pinned-tab.svg" color="#000000">
+    <link rel="icon" sizes="32x32" href="./favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="./assets/images/favicon-180x180.png">
+    <link rel="mask-icon" href="./assets/images/safari-pinned-tab.svg" color="#000000">
     <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'"
         href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine&display=swap">
