--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
 <script defer src="/bundled.js"></script></head>
 
 <body>
-    <div id="app"></div>
+    <div id="app" tabindex="-1"></div>
 </body>
 
 </html>
